--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ body.no-scroll{ overflow:hidden }
 <!-- 17) Video Gallery -->
 <section id="videos" class="reveal">
   <div class="section-head">
-    <h3 class="title"><i class="fa-solid fa-film"></i><span data-ar>معرض الفيديو</span><span data-en>Video Gallery</span></h3>
+    <h3 class="title"><i class="fa-solid fa-film"></i><span data-ar> معرض الفيديو استراتيجيات </span><span data-en>Video Gallery</span></h3>
     <div class="actions" data-guard>
       <label for="vidInput" class="btn icon" title="رفع فيديو"><i class="fa-solid fa-upload"></i></label>
       <input id="vidInput" type="file" multiple accept="video/*" hidden>
