--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ body.no-scroll{ overflow:hidden }
     <h3 class="title"><i class="fa-solid fa-scale-balanced"></i><span data-ar>الأخلاقيات المهنية</span><span data-en>Professional Ethics</span></h3>
   </div>
   <div class="cv-card">
-    <h4 style="margin:0 0 12px;color:#4a3728" data-ar>ميثاق الشرف المهني</h4>
+    <h4 style="margin:0 0 12px;color:#4a3728" data-ar>ميثاق أخلاقيات المهنة</h4>
     <h4 style="margin:0 0 12px;color:#4a3728" data-en>Professional Code of Honor</h4>
     
     <p class="lead" style="font-weight:700;color:#4a3728;margin-bottom:16px" data-ar>
