--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@ body.no-scroll{ overflow:hidden }
 <!-- 14) Support & Ta'zeez -->
 <section id="support" class="reveal">
   <div class="section-head">
-    <h3 class="title"><i class="fa-solid fa-hands-holding-child"></i><span data-ar>تعزيز ودعم</span><span data-en>Support & Reinforcement</span></h3>
+    <h3 class="title"><i class="fa-solid fa-hands-holding-child"></i><span data-ar> دعم وتقوية </span><span data-en>Support & Reinforcement</span></h3>
     <div class="actions" data-guard>
       <label for="supInput" class="btn icon" title="رفع صور/فيديو/ملفات"><i class="fa-solid fa-upload"></i></label>
       <input id="supInput" type="file" multiple accept="image/*,video/*,application/pdf" hidden>
